# axum-yew-template

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/src/components/: counter.rs  mod.rs
scripts/: dev-backend.sh  dev-frontend.sh  dev.sh  docs.sh  install-dependencies.sh  prod.sh
types/: Cargo.toml
types/src/: lib.rs
