[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
axum-extra = { version = "0.3.7", features = ["spa"] }
base64 = "0.13.1"
clap = { version = "4.0.18", features = ["derive"] }
hyper = { version = "0.14.20", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
types = { path= "../types"}

