[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.4"
gloo-timers = "0.2.4"
gloo-utils = "0.1.5"
js-sys = "0.3.60"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
types = { path= "../types"}
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
ybc = "0.2.1"
yew = "0.19.3"
yew-router = "0.16.0"

[dependencies.web-sys]
version = "0.3"
# We need to enable the `DomRect` feature in order to use the
# `get_bounding_client_rect` method.
features = [
    "console",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]
